force-app/main/default/objects/ProcessMatrix__c/ProcessMatrix__c.object-meta.xml
<CustomObject>
    <label>Matrice Processi</label>
    <nameField>
        <label>Matrice Processi Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matrice Processi</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>