force-app/main/default/objects/ProcessMatrix__c/fields/CasualCode__c.field-meta.xml
<CustomField>
    <fullName>CasualCode__c</fullName>
    <label>CasualCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>