force-app/main/default/objects/ProcessMatrix__c/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <label>Commodity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Energia Elettrica</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Multi</fullName>
            </value>
            <value>
                <fullName>Teleriscaldamento</fullName>
            </value>
            <value>
                <fullName>Acqua</fullName>
            </value>
            <value>
                <fullName>Ambiente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>