force-app/main/default/objects/ProcessMatrix__c/fields/ExistActivityDatiDiscordanti__c.field-meta.xml
<CustomField>
    <fullName>ExistActivityDatiDiscordanti__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ExistActivityDatiDiscordanti</label>
    <type>Checkbox</type>
</CustomField>