force-app/main/default/objects/ProcessMatrix__c/fields/ExistActivityDatiDiscordantiNew__c.field-meta.xml
<CustomField>
    <fullName>ExistActivityDatiDiscordantiNew__c</fullName>
    <label>Flag Dati Discordanti</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_YesNoAll</valueSetName>
    </valueSet>
</CustomField>