force-app/main/default/objects/ProcessMatrix__c/fields/ExistActivitySwitchRipristinatorioNew__c.field-meta.xml
<CustomField>
    <fullName>ExistActivitySwitchRipristinatorioNew__c</fullName>
    <label>Flag Switch Ripristinatorio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_YesNoAll</valueSetName>
    </valueSet>
</CustomField>