force-app/main/default/objects/ProcessMatrix__c/fields/IsChangeUse__c.field-meta.xml
<CustomField>
    <fullName>IsChangeUse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsChangeUse</label>
    <type>Checkbox</type>
</CustomField>