force-app/main/default/objects/ProcessMatrix__c/fields/IsChangeUseNew__c.field-meta.xml
<CustomField>
    <fullName>IsChangeUseNew__c</fullName>
    <label>Flag Cambio Uso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_YesNoAll</valueSetName>
    </valueSet>
</CustomField>