force-app/main/default/objects/ProcessMatrix__c/fields/isOwnAccountNew__c.field-meta.xml
<CustomField>
    <fullName>isOwnAccountNew__c</fullName>
    <label>Stesso Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_YesNoAll</valueSetName>
    </valueSet>
</CustomField>