force-app/main/default/objects/ProcessMatrix__c/fields/IsSameAccount__c.field-meta.xml
<CustomField>
    <fullName>IsSameAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSameAccount</label>
    <type>Checkbox</type>
</CustomField>