force-app/main/default/objects/ProcessMatrix__c/fields/OngoingSwitchOut__c.field-meta.xml
<CustomField>
    <fullName>OngoingSwitchOut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OngoingSwitchOut</label>
    <type>Checkbox</type>
</CustomField>