force-app/main/default/objects/ProcessMatrix__c/fields/PlugPresence__c.field-meta.xml
<CustomField>
    <fullName>PlugPresence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PlugPresence</label>
    <type>Checkbox</type>
</CustomField>