force-app/main/default/objects/ProcessMatrix__c/fields/PowerChange__c.field-meta.xml
<CustomField>
    <fullName>PowerChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PowerChange</label>
    <type>Checkbox</type>
</CustomField>