force-app/main/default/objects/ProcessMatrix__c/fields/RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeName__c</fullName>
    <label>RecordTypeName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>